[package]
name = "dowiz-kernel"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "dowiz deterministic core: order-state machine (decide/fold Law) + integer money. RustŌåÆWASM. The TS app is the legacy oracle; this is the canonical kernel."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# `std` (default) enables runtime CPU-feature detection for the FMA eigensolver
# kernel. Disable (`--no-default-features`) for a no-std embedding: the solver's
# hot path is stack-only and falls back to compile-time target_feature / scalar.
default = ["std"]
std = []
# `json-api` = the JSON string boundary WITHOUT wasm-bindgen. It pulls the SAME
# serde/serde_json the `wasm` surface needs for the order (de)serialization, but
# no browser glue ŌĆö so the native HTTP adapter (native-spa-server) and the wasm
# JS surface share ONE JSON authority (`kernel/src/json_api.rs`). The default
# kernel build stays serde-free (verified via `cargo tree -p dowiz-kernel
# --no-default-features -e no-dev | grep -c serde` ŌåÆ 0). `wasm` becomes a
# superset of `json-api` so the browser surface is unchanged.
json-api = ["dep:serde", "dep:serde_json"]
# `wasm` pulls the wasm-bindgen JS glue + the serde (de)serialization it needs.
# OFF by default so a native rlib consumer (e.g. bebop-delivery-domain) links the
# kernel WITHOUT wasm-bindgen / serde / serde_json / serde_yaml in its graph.
# The kernel's decide/order_machine/domain/money core is pure-Rust and
# feature-independent. `loops` + `living_knowledge` are serde-dependent, so they
# ride behind this feature (the only one that enables serde) to keep the native
# build serde-free; neither is part of the canonical order/money core.
wasm = ["json-api", "dep:wasm-bindgen", "dep:serde_yaml"]
# `chaos` ŌĆö the zero-dependency deterministic fault-injection harness (P-H W-H1).
# OFF by default so production artifacts carry NO chaos symbols (the whole
# `chaos` module is `#[cfg(any(test, feature = "chaos"))]`); a release build
# compiles the injection machinery to `()`, unrepresentable-at-the-boundary.
chaos = []
# `count-allocs` ŌĆö installs a counting global allocator (W5 DoD ┬¦8.2) that
# measures HEAP allocations around a code region, so the criterion A/B's
# "Ōēż 8 heap allocations on the arena path" assertion is INSTRUMENTED rather
# than structural. OFF by default (installs no custom allocator in normal
# builds); enabled by the dedicated `arena_counting_allocs` test target.
count-allocs = []
# `pgrust` is the OPTIONAL Postgres SQL adapter for the living-memory store
# (M4/W4-1). OFF by default so the kernel stays pure-`std` with no network
# deps; the default `InMemoryStore` is native std-only. Behind this flag,
# `retrieval/memory_store.rs` compiles a REAL sqlx-backed `PgStore` (see its
# `migrate()` for the explicit, opt-in DDL ŌĆö never auto-run).
pgrust = ["dep:sqlx", "dep:tokio"]
# `pq` ŌĆö KAT-gated post-quantum crypto core (ML-DSA-65 / ML-KEM-768 / X25519 /
# AES-GCM volume), zero external PQ crates, byte-exact vs NIST ACVP vectors.
# OFF by default so the canonical order/money core stays pure-`std` and
# serde-free; `pq` is an OPT-IN subsystem (mesh/transport identity seam), not
# part of the decide/fold Law. `serde`/`aes-gcm`/`curve25519-dalek` ride ONLY
# behind this feature (same discipline as `wasm`).
pq = ["dep:serde", "dep:serde_json", "dep:aes-gcm", "dep:curve25519-dalek"]
# `gpu` ŌĆö P38 O18a graphics unlock. OFF by default so the canonical order/money
# core and the wasm cdylib stay lean and GPU-free. Behind this flag,
# `render/gpu.rs` compiles a REAL headless wgpu bring-up (InstanceŌåÆAdapterŌåÆ
# Device). `wgpu`'s adapter request is async, so `pollster` rides the same flag
# to block_on it from the synchronous kernel boundary (no async runtime pulled
# into the default build). The default build compiles `render` to nothing.
gpu = ["dep:wgpu", "dep:pollster"]
# `slot-arena` ŌĆö OPT-IN generational-index slot arena (thunderdome, zero runtime
# deps). OFF by default so the canonical order/money core stays pure-`std` and
# pulls NO extra crate into its graph ŌĆö same opt-in discipline as `pq`/`gpu`/
# `pgrust`. Behind this flag, `slot_arena.rs` wraps `thunderdome::Arena` behind a
# thin, dowiz-flavored `SlotArena<T>` / `Handle` API whose generational handles
# make a stale (removed-then-recycled) handle a safe `None` ŌĆö the ABA / stale-index
# bug is unrepresentable. Forward-looking infrastructure: the first named trigger
# is an incremental mesh/graph index that deletes nodes while other structures hold
# references to them (deep-dive ┬¦5). Added per operator directive OVERRIDING that
# deep-dive's own "no adoption yet" verdict ŌĆö see
# `docs/research/OPUS-PERF-ARENA-DEEPDIVE-2026-07-18.md`. The default build carries
# zero thunderdome symbols (verify: `cargo tree -p dowiz-kernel -e no-dev |
# grep -c thunderdome` ŌåÆ 0).
slot-arena = ["dep:thunderdome"]

# innovate: rsa 0.9.x (RUSTSEC-2023-0071, Marvin timing) appears in Cargo.lock but
# `cargo tree -i rsa` prints nothing ŌĆö it is NOT linked into any active build path
# (neither default nor pgrust). "No fixed upgrade available" + zero code usage =
# no real exposure. Decision (2026-07-16, C-triage): do NOT force-upgrade; revisit
# only if a future dep actually pulls rsa into the kernel graph. Upgrade trigger:
# `cargo tree -i rsa` shows a real path OR a patched rsa release ships.

# `p67-adapters` ŌĆö OPT-IN closed Wave-0 infra adapters (CloudflareTunnel /
# HetznerVps) for BLUEPRINT P67 hub-provisioning. OFF by default so the
# canonical kernel stays pure-`std` and provider-agnostic; the default lib
# build compiles ONLY the provider-agnostic `hub_provisioning` module + its
# in-module mock adapters (no Cloudflare / Hetzner / network symbols). The real
# bindings ride this flag behind `#[cfg(feature = "p67-adapters")]`.
p67-adapters = []
# `telemetry` ŌĆö P83 kernel production observability (BLUEPRINT P83 / SYNTHESIS
# PERFORMANCE AUDIT ┬¦3.3-C4). OFF by default so the shipping binary carries NO
# observability symbols or filesystem-writer code paths. Behind this flag, the
# `fdr::` spans already placed over the 8 verified hot functions are consumed by a
# ZERO-DEP `SpanMetricsObserver` (a kernel-owned `fdr::SpanObserver` ŌĆö the retired
# `tracing_subscriber::Layer`'s replacement, roadmap items 4+29) that writes
# hand-rolled log-bucket latency histograms to `metric.jsonl`, and the Layer-2
# `load1/nproc >= 4` breach branch triggers a system-wide `perf record -a -g -F 99`
# (alert.jsonl). Std-only writer; no serde/network/RNG. The default (shipping) build
# is behavior- and perf-neutral.
telemetry = []
# `pprof` ŌĆö P83 Layer-2 fallback ONLY (SYNTHESIS ┬¦3.3-C4: "`pprof` only as
# feature-gated fallback"). Activated when the system-wide `perf` invocation is
# unavailable (no perms / not Linux). OFF by default; it is a SAFE no-op fallback
# (writes a marker alert.jsonl row, never shells out, never hangs, never needs
# root). It does NOT pull any external crate into the graph ŌĆö the fallback is
# pure `std`. Gated so its symbols never reach the shipping binary.
pprof = []

[dependencies]
# WASM bindings ŌĆö only compiled under the `wasm` feature (see
# `#[cfg(feature = "wasm")] pub mod wasm;` in lib.rs). The kernel is pure Rust
# and usable headless + as a native rlib without this.
wasm-bindgen = { version = "0.2", optional = true }
# JSON/YAML (de)serialization for the wasm-bindgen JS glue + the serde-dependent
# modules (`loops`, `living_knowledge`). Feature-gated (see `wasm` feature) so a
# native rlib build pulls NONE of them. `pq` reuses `serde` (derive) under its
# own feature flag.
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9", optional = true }
# SQL adapter (Postgres) ŌĆö ONLY compiled under the `pgrust` feature so the
# default kernel stays pure-`std` / network-free. sqlx 0.8.6 is cached offline;
# the runtime is Tokio (also gated) to drive the async pool from the
# synchronous `MemoryStore` trait boundary.
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
# PQ subsystem deps ŌĆö OPTIONAL, only linked under the `pq` feature.
aes-gcm = { version = "0.10.3", features = ["std"], optional = true }
curve25519-dalek = { version = "4", optional = true }
# RETIRED (roadmap items 4+29, dependency-replacement procedure ŌĆö verdict (a) removed
# outright): `tracing = "0.1"` + `tracing-subscriber = "0.3"` were deleted here. The kernel
# now owns its logger/flight-data-recorder (`src/fdr/`); spans/events bind to `fdr::`, the
# P83 layer is a kernel `fdr::SpanObserver`, and `init_tracing`ŌåÆ`fdr::init`. Removal dropped
# 19 transitive crates (25ŌåÆ6 in the default no-dev tree). INVARIANT + verification one-liner:
#   cargo tree --manifest-path kernel/Cargo.toml -e no-dev --locked --offline | grep -c tracing  ŌåÆ 0
# Ruling: src/fdr/mod.rs module doc (steps 1ŌĆō5,9,10) +
# docs/design/BLUEPRINT-ITEMS-04-29-logger-fdr-rewrite-2026-07-19.md. Reopen trigger: a real
# requirement to export kernel telemetry to an external tracing/OpenTelemetry collector.
# L0 exact-search verify step (trigram inverted-index narrows candidates,
# regex verifies each ŌĆö deterministic, 0 false positives). Blueprint M1/W1-3.
# (regex is item 5's retirement target ŌĆö strictly after this change, roadmap ┬¦B.)
regex = "1"
# GPU render backend (P38 O18a) ŌĆö ONLY compiled under the `gpu` feature so the
# default kernel carries zero GPU symbols (feature-additive; guard-restorable).
wgpu = { version = "30.0.0", optional = true }
# Minimal executor to block_on wgpu's async adapter/device requests from the
# synchronous kernel boundary ŌĆö gated with `gpu`, never in the default graph.
pollster = { version = "1.0.1", optional = true }
# Generational-index slot arena ŌĆö ONLY compiled under the `slot-arena` feature so
# the default kernel pulls zero extra crates. thunderdome has NO transitive runtime
# dependencies (its own `Cargo.toml` has no `[dependencies]` section); 8-byte keys
# with a niche-packed 8-byte `Option<Index>`. `slot_arena.rs` wraps it behind the
# dowiz `SlotArena<T>` / `Handle` API so call sites never touch `thunderdome::*`.
thunderdome = { version = "0.6", optional = true }

[dev-dependencies]
# Benchmarking harness for real latency/throughput telemetry on the hot paths.
criterion = "0.5"
# PQ KAT test macro expansion (dsa_acvp_tests.rs) ŌĆö dev-only, not in any build path.
paste = "1.0"
# Property-test harness for the P47 reconciliation invariant (B3) ŌĆö arbitrary order
# sequences folded vs. settlement totals, exact-i64 equality. Cached offline (1.11.0),
# dev-only, never linked into a production build path.
proptest = "1.11"

[[bench]]
name = "criterion"
harness = false

# P80 (S1 ┬¦3.3-C1 / SYNTHESIS-PERFORMANCE-AUDIT-2026-07-18) ŌĆö kernel bench-coverage
# expansion. Each entry is a focused bench group following the <group>/<n> bench-id
# convention owned by P75 (P80 cites it, does NOT redefine). The `pq`-gated groups
# carry `required-features = ["pq"]` so `cargo bench --no-run` compiles the default
# build, and `cargo bench --no-run --features pq` compiles the PQ lanes.

# Growth-tripwire ONLY (S1 ┬¦2 binding verdict): ledger_sum is NOT changed. Sweep n Ōłł
# {2,8,64,256}; revisit threshold written in the bench's doc-comment.
[[bench]]
name = "money_ledger"
harness = false

# Spectral / linear-algebra surfaces (eigenvalues straddling n=32 QRŌåöFaddeev, matmul,
# kalman, classify_drift, laplacian_spmv). Pure-std, no feature gate.
[[bench]]
name = "spectral_math"
harness = false

# Retrieval/geo surfaces (bm25 isolate, progress_along_route, harmonic_centrality).
[[bench]]
name = "retrieval_geo"
harness = false

# PPR growth sweep n Ōłł {32,128,256} @ ╬▒=0.15 (R1 ┬¦4). Revisit threshold in doc-comment.
[[bench]]
name = "ppr"
harness = false

# Absorbing Markov fundamental matrix (relabel _16ŌåÆ_cyclic_16, add lifecycle_5 real DAG
# path + dag_chain sweep, 2 doc fixes: true O(nŌü┤) not O(n┬│); no "agentic decision gating").
[[bench]]
name = "absorbing"
harness = false

# Entire kernel PQ lane (ML-DSA sign/verify, ML-KEM encaps/decaps, hybrid decaps,
# SHAKE256/SHA3 size-swept). GATED behind `pq` (same discipline as the `pq` module).
[[bench]]
name = "kernel_crypto_pq"
harness = false
required-features = ["pq"]

# Mesh signed-chain verification (ML-DSA, gated behind `pq` like `mesh` itself).
[[bench]]
name = "mesh_verify"
harness = false
required-features = ["pq"]

# Contended multi-threaded benchmarks for the three Mutex sites flagged
# NEEDS-CONTENDED-BENCH-FIRST by docs/research/OPUS-PERF-KERNEL-AUDIT-2026-07-18.md
# (token_bucket A1, budget A2, admission seen-set A3). NŌłł{1,2,4,8} threads hammer one
# shared object; each candidate atomic/lock-free impl is measured against the Mutex.
[[bench]]
name = "contention"
harness = false


# NOTE: the W5 counting-allocator integration test (tests/arena_counting_allocs.rs)
# is not yet wired ŌĆö the counting global-allocator feature exists (`count-allocs`,
# line 35) but the dedicated target's source was never committed. The allocation
# ceiling is instead falsified by the in-lib `arena_path_uses_fewer_heap_allocs_than_heap`
# test. Re-add this `[[test]]` block once tests/arena_counting_allocs.rs lands.
# [[test]]
# name = "arena_counting_allocs"
# path = "tests/arena_counting_allocs.rs"
# required-features = ["count-allocs"]

# Native-kernel living-memory retrieval CLI ŌĆö the max-speed replacement for the
# out-of-tree living_memory.py (177ms Python/query). Links dowiz_kernel directly,
# ranks the live memory corpus with the in-kernel BM25+trigram fusion in-process.
[[bin]]
name = "lm"
path = "src/bin/lm.rs"

# Native-kernel Markov attractor detector CLI ŌĆö replaces the out-of-tree
# tools/loop-signals/markov_attractor.py (now deleted; kernel `markov` module is
# the port, with VbM parity tests). Emits the exact JSON contract check.sh parses.
[[bin]]
name = "markov_attractor"
path = "src/bin/markov_attractor.rs"

# FDR durable-ring test/ops tool (roadmap items 4+29). Dual-mode (write / write-clean /
# recover); the kill-9 recovery integration test (tests/fdr_kill9.rs) spawns it as a real
# child process and SIGKILLs it. Pure std, links dowiz_kernel ŌĆö zero external deps.
[[bin]]
name = "fdr_recorder"
path = "src/bin/fdr_recorder.rs"

[profile.release]
opt-level = 3
lto = true
