[package]
name = "llm-adapters"
version = "0.1.0"
edition = "2021"
description = "LlmBackend adapters (Ollama/vLLM/managed-API) for dowiz — ureq-based, no tokio."

# Standalone crate at repo root (sibling to kernel/), NOT a workspace member.
# Build with `cargo build` from this directory, matching how engine/ builds independently.

[dependencies]
dowiz-kernel = { path = "../kernel" }
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"
agent-loop = { path = "../agent-loop" }
agent-facade = { path = "../agent-facade" }

[[bench]]
name = "criterion"
harness = false

[lib]
name = "llm_adapters"
path = "src/lib.rs"
