[package]
name = "payment-adapters"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "P60-PAYMENT: out-of-kernel payment adapter implementations (Stripe). Compile firewall: implements PaymentProvider, uses ureq/HMAC, never sees card data."

[dependencies]
dowiz-kernel = { path = "../kernel" }
ureq = "3"
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
