[package]
name = "dowiz-server"
version = "0.1.0"
edition = "2021"
description = "dowiz Pure-Rust backend: axum + tokio + rusqlite (bundled) serving the dowiz-kernel order domain. No courier scoring."

[dependencies]
# The deterministic kernel (pure rlib). Path dependency into the workspace.
dowiz-kernel = { path = "../kernel" }
# Web framework.
axum = "0.7"
# Async runtime.
tokio = { version = "1", features = ["full"] }
# SQLite (bundled libsqlite3 — no system dependency).
rusqlite = { version = "0.31", features = ["bundled"] }
# (De)serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Static file serving of web/dist (SPA).
tower-http = { version = "0.5", features = ["fs"] }

[dev-dependencies]
# Tower's oneshot test helper (`tower::util::ServiceExt`), matching tower-http 0.5.
tower = "0.5"
