[package]
name = "dowiz-wasm"
version = "0.1.0"
edition = "2021"
description = "dowiz physics-render wasm bridge: exposes the engine field_frame.compose RGBA + VertexBridge graph-Laplacian field to JS via wasm-bindgen (zero TS math)."

[lib]
name = "dowiz_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pinned to 0.2.95 to match the ONLY wasm-bindgen CLI available offline
# (/root/.cargo/bin/wasm-bindgen 0.2.95). The schema version must match
# EXACTLY for glue generation; 0.2.126 CLI is not cached, so we pin the
# crate to the CLI we have. innovate: when a 0.2.126 (or newer) CLI is
# available in the build env, lift this pin and regenerate.
wasm-bindgen = "=0.2.95"
dowiz-engine = { path = "../engine" }
dowiz-kernel = { path = "../kernel" }
# serde + serde_json are OFFLINE-CACHED (verified in registry cache); used to
# parse the JS-supplied doc array into SpineIndex records. They do NOT pull any
# network deps, and spine (kernel) is non-feature-gated so no kernel feature flag
# is needed.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
