[package]
name = "dowiz-kernel-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.dowiz-kernel]
path = ".."

[[bin]]
name = "fuzz_trinary"
path = "fuzz_targets/fuzz_trinary.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_eigen"
path = "fuzz_targets/fuzz_eigen.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sanitize"
path = "fuzz_targets/fuzz_sanitize.rs"
test = false
doc = false
bench = false
